--- a/Sass/components/_nav.scss
+++ b/Sass/components/_nav.scss
@@ -1,20 +1,46 @@
 #Navigation {
+  padding: 1rem 0;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  
   img {
-    height: 90px;
+    height: 60px;
+    order: 2;
   }
-
-  justify-content: space-around;
 
   a {
     color: $gold-light;
+    transition: color 0.3s ease;
+    
+    &:hover {
+      color: $gold;
+    }
   }
+  
   ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+    &:first-of-type {
+      order: 1;
+    }
+    
+    &:last-of-type {
+      order: 3;
+    }
+    
     li {
       padding: 0 1.2rem;
       position: relative;
+      
       a {
         font-weight: 500;
+        font-size: 0.9rem;
       }
+      
       &:hover::before {
         content: "";
         position: absolute;
@@ -25,6 +51,7 @@
         background: $gold-light;
         animation: fadeIn 1s ease;
       }
+      
       @keyframes fadeIn {
         0% {
           opacity: 0;
@@ -35,7 +62,9 @@
       }
     }
   }
+  
   #nav-btn {
     display: none;
+    order: 4;
   }
 }
